# tms-vghks-cli

./: .gitignore  .tms_accounts.example.toml  README.md  REQUESTS_PARITY_REPORT.md  pyproject.toml  question-bank-20260625.jsonl
docs/: CLI.md  DIAGNOSTICS.md
src/tms_vghks/: __init__.py  backends.py  batch_login.py  capabilities.py  captcha_recognizers.py  cli.py  cli_auth.py  cli_bank.py  cli_complete.py  cli_courses.py  cli_diag.py  cli_impl.py  cli_parser.py  config.py  export_pacing.py  handlers.py  kexam_common.py  login_error_probes.py  models.py  network_diagnostics.py  parsers.py  playwright_form_validation.py  playwright_kexam.py  playwright_probe.py  privacy.py  question_bank_export.py  quiz.py  quiz_resolver.py  reading_accumulation.py  reference_bank.py  requests_form_submit.py  requests_kexam.py  requests_login.py  requests_parity.py  requests_probe.py  requests_question_bank.py  (+9 more)
tests/: test_auth_and_backend.py  test_backend_tools.py  test_batch_login.py  test_cli_facade.py  test_dependency_config.py  test_export_pacing.py  test_network_diagnostics.py  test_parsers.py  test_playwright_form_validation.py  test_playwright_kexam.py  test_playwright_probe.py  test_privacy.py  test_question_bank_export.py  test_quiz.py  test_quiz_resolver.py  test_reading_accumulation.py  test_reference_bank.py  test_requests_form_submit.py  test_requests_kexam.py  test_requests_login.py  test_requests_parity.py  test_requests_probe.py  test_requests_question_bank.py  test_requests_reproduction.py  test_requests_watch_time.py  test_scheduler.py  test_transient_recovery.py
