[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tms-vghks-cli"
version = "0.1.0"
description = "Requests + Playwright automation helpers for the VGHKS TMS+ learning site."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "tenacity>=8.2",
]

[project.optional-dependencies]
playwright = [
  "playwright>=1.40",
]
ocr-sdk = [
  "paddleocr>=3.7,<4",
  "paddlepaddle>=3.0,<4",
]
full = [
  "playwright>=1.40",
  "paddleocr>=3.7,<4",
  "paddlepaddle>=3.0,<4",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.uv]
default-groups = []

[project.scripts]
tms-vghks-cli = "tms_vghks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

